# django-revision

./: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
Revision/: asgi.py  settings.py  urls.py  wsgi.py
User/: admin.py  models.py
User/migrations/: 0001_initial.py
